feat: create condominium controller
